fix: 2811200112 modal scss content overflow auto

--- a/modalz/index.scss
+++ b/modalz/index.scss
@@ -64,6 +64,6 @@
         z-index: 100002;
         max-height: 100vh;
         max-width: 100%;
-        overflow: hidden;
+        overflow: auto;
     }
 }
